<resources>
    <string name="app_name">去滑板</string>
    <string name="version">版本</string>
    <string name="login">登录</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="write_account">请输入账号</string>
    <string name="write_password">请输入密码</string>
    <string name="article">文章</string>
    <string name="skate">滑板</string>
    <string name="map">地图</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="find">发现</string>
    <string name="navigation">路线规划</string>
    <string name="skateboard_action">滑板招式</string>
    <string name="remember_password">记住密码</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="setting">设置</string>
    <string name="chunyun">没错，我就是春云</string>
    <string name="test">测试</string>
    <string name="learn">学习</string>
    <string name="gkdoe_web">www.gkdoe.com</string>
    <string name="qwer_web">www.qwer.com</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
